# ragas

./: .env.example  .gitignore  GIT_PUSH_INSTRUCTIONS.md  README.md  commit.bat  config.py  example_test_plan.csv  install-fast.bat  install.bat  install.sh  model_config.py  push-to-github.bat  pyproject.toml  requirements-strict.txt  requirements.txt  setup_venv.bat  start.bat  start.sh  streamlit_ragas_eval.py  streamlit_ui.py  uv-install.bat  uv-install.sh
