[project]
name = "ragas-evaluation-tool"
version = "1.0.0"
description = "RAGAS Evaluation Tool for testing RAG systems with Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "RAGAS Evaluation Tool"}
]
keywords = ["ragas", "evaluation", "rag", "bedrock", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "boto3",
    "datasets",
    "pandas",
    "requests",
    "langchain",
    "langchain-community",
    "langchain-aws",
    "ragas",
    "streamlit",
    "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

