[project]
name = "ragas-evaluation-tool"
version = "1.0.0"
description = "RAGAS Evaluation Tool for testing RAG systems with Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3",
    "datasets",
    "pandas",
    "requests",
    "langchain",
    "langchain-community",
    "langchain-aws",
    "ragas",
    "streamlit",
    "pydantic>=2.7.0,<3.0.0",
]

[tool.uv]
dev-dependencies = []
# Don't install the project itself as a package (it's an application, not a library)
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

